AJUSTANDO COMPONENTES NAVBAR E TOOLBAR

--- a/webapp/stylus/login.styl
+++ b/webapp/stylus/login.styl
@@ -39,6 +39,16 @@
     font-size: 12px;
     font-style: normal;
     line-height: 15px;
+  .esqueci
+    opacity :0.5;
+.fade-enter-active &
+.fade-leave-active 
+   transition: opacity 0.2s
+.fade-enter &
+.fade-leave-to
+   opacity: 0
+
+
 
   
 
