--- a/webapp/stylus/main.styl
+++ b/webapp/stylus/main.styl
@@ -6,6 +6,10 @@
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
+.colorblue
+   color:#03b4f1;
+.colorblackop
+  color:#c9cdd0
 // /** Stylus Styles */
 
 // @import '../../node_modules/vuetify/src/stylus/settings/_colors'
