Criando comunicação entre componentes dashboard

--- a/webapp/stylus/main.styl
+++ b/webapp/stylus/main.styl
@@ -6,6 +6,19 @@
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
+.mg
+   display:none;
+.overlay.overlay--active 
+    -webkit-filter: blur(1px);
+    -moz-filter: blur(1px);
+    -o-filter: blur(1px);
+    -ms-filter: blur(1px);
+    filter: blur(1px);
+
+
+
+
+
 
 
 // /** Stylus Styles */
