Inserindo mixin Helper de pesquisa a objetos e criando seleção personalizada Home e Mais

--- a/webapp/stylus/main.styl
+++ b/webapp/stylus/main.styl
@@ -9,67 +9,12 @@
 .mg
    display:none;
 .overlay.overlay--active 
-    -webkit-filter: blur(1px);
-    -moz-filter: blur(1px);
-    -o-filter: blur(1px);
-    -ms-filter: blur(1px);
-    filter: blur(1px);
-
-
-
-
-
-
-
-// /** Stylus Styles */
-
-// @import '../../node_modules/vuetify/src/stylus/settings/_colors'
-
-// $theme := {
-//   primary: $red.darken-2
-//   accent: $red.accent-2
-//   secondary: $grey.lighten-1
-//   info: $blue.lighten-1
-//   warning: $amber.darken-2
-//   error: $red.accent-4
-//   success: $green.lighten-2
-// }
-
-// @import '../../node_modules/vuetify/src/stylus/main'
-
-// .custom-loader {
-//   animation: loader 1s infinite;
-//   display: flex;
-// }
-// @-moz-keyframes loader {
-//   from {
-//     transform: rotate(0);
-//   }
-//   to {
-//     transform: rotate(360deg);
-//   }
-// }
-// @-webkit-keyframes loader {
-//   from {
-//     transform: rotate(0);
-//   }
-//   to {
-//     transform: rotate(360deg);
-//   }
-// }
-// @-o-keyframes loader {
-//   from {
-//     transform: rotate(0);
-//   }
-//   to {
-//     transform: rotate(360deg);
-//   }
-// }
-// @keyframes loader {
-//   from {
-//     transform: rotate(0);
-//   }
-//   to {
-//     transform: rotate(360deg);
-//   }
-// }
+    margin-top:63px;
+.toolbaRightLbl
+    height: 5%;	
+    width: 13.01%;
+    color: #0A1F30;	
+    // font-family: "Source Sans Pro";	
+    font-size: 16px;	
+    font-weight: bold;	
+    line-height: 20px;
