Estilizando conteudo interno no componente navegation overlaping

--- a/webapp/src/components/Shared/Navigation/navigationoverlaping.less
+++ b/webapp/src/components/Shared/Navigation/navigationoverlaping.less
@@ -1,10 +1,37 @@
-.exibetest{    
-    height:400px;
-    background-color:pink;
-    &-texto{
-        color: red;
-		margin-left:120px;
-	}
+.navigation_overlaping {
+    &-color {
+        color: #0A1F30 !important;
+        &-blue {
+            color:#00B4F1 !important;
+        }
+    }
+    &-activeCorporation {
+        background-color: #fff;
+        margin: 10px;
+        color:#00B4F1;
+        font-weight: 900;
+        border-radius: 5px;
+        -webkit-box-shadow: -7px 19px 105px -23px rgba(0,0,0,0.2);
+        -moz-box-shadow: -7px 19px 105px -23px rgba(0,0,0,0.2);
+        box-shadow: -7px 19px 105px -23px rgba(0,0,0,0.2);
+    }
+    &-divider {
+        border-radius: 2px;
+        opacity: 0.05;
+        height: 3px;
+        width: 90%;
+        background-color: #0A1F30;
+    }
+    &-title {
+        padding: 5px;
+        &-texto {
+            color: red;
+        }
+    }
+}
+.bordercard {
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 
