--- a/webapp/stylus/main.styl
+++ b/webapp/stylus/main.styl
@@ -11,10 +11,8 @@
 .overlay.overlay--active 
     margin-top:63px;
 .toolbaRightLbl
-    height: 5%;	
-    width: 13.01%;
-    color: #0A1F30;	
-    // font-family: "Source Sans Pro";	
-    font-size: 16px;	
+    color: #0A1F30;		
+    font-size: 15px;
+    width: 150px;
+    margin-left: 20px;
     font-weight: bold;	
-    line-height: 20px;
