Renderizando html nas caixas do diagrama

--- a/webapp/src/components/ToolBar/toolbar.less
+++ b/webapp/src/components/ToolBar/toolbar.less
@@ -1,3 +1,9 @@
+.navbar {
+    overflow: hidden;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+}
 .arrow-up{
     width: 0;
     height: 0;
