--- a/webapp/src/components/Shared/Diagram/dr-tree/dr-tree.less
+++ b/webapp/src/components/Shared/Diagram/dr-tree/dr-tree.less
@@ -36,7 +36,8 @@
   .org-tree-node-label-inner {
     padding: 10px 15px;
     text-align: center;
-    border-radius: 3px;
+    border-radius: 8px;
+    // background-color: #D6E1EB;
     box-shadow: 0 1px 5px rgba(0, 0, 0, .15);
   }
 }
