Caixas divergências fake para apresentação

--- a/webapp/src/components/Navigation/navigation.less
+++ b/webapp/src/components/Navigation/navigation.less
@@ -17,7 +17,7 @@
     transition: background-color 200ms ease-in 100ms;
     cursor: pointer;
     &-icons {
-        color: #00b4f1 !important;
+        color: #9ab9ca !important;
         font-size: 24px;
     }
     &-icons_over {
