--- a/webapp/less/main.less
+++ b/webapp/less/main.less
@@ -1,3 +1,6 @@
+html {
+    font-family: 'Open Sans',serif !important;
+}
 .bg {
     width: 100%;
     height: 100%;
@@ -9,6 +12,13 @@
 }
 .mg {
     display:none;
+}
+.bluedetail-font{
+    color: #00B4F1;
+}
+.cinza2-font{
+    color: #0A1F30;
+    opacity: 0.3;
 }
 // .overlay.overlay--active 
 //     margin-top:63px;
