--- a/webapp/src/components/ToolBar/toolbar.less
+++ b/webapp/src/components/ToolBar/toolbar.less
@@ -11,6 +11,13 @@
     border-right: 10px solid transparent;
     border-bottom: 10px solid white;
 }
+.navbar-brand {
+
+    transform: translateX(-50%);
+    left: 50%;
+    position: absolute;
+    width: 100px; /* no height needed ... image will resize automagically */
+  }
 .expansion-panel li {
     border: 10px solid #ddd;
 }
