Apresentacao video login

--- a/webapp/src/components/Login/login.styl
+++ b/webapp/src/components/Login/login.styl
@@ -14,8 +14,9 @@
 .imagem-responsiva
   width: 100%;
 .rectangle-3
-	width 4px
-	background-color #FFFFFF
+	width 21px
+	background: url("/static/2018-01-31a.png") no-repeat
+
 .layout_input
   background-color:#ccc;
   padding:10px;
