--- a/webapp/less/main.less
+++ b/webapp/less/main.less
@@ -55,6 +55,8 @@ html, body {
     /* Set the height to match that of the viewport. */
      height: 100vh;
      width: auto;
+     overflow:hidden;
+     overflow-y:hidden;
      padding:0!important;
      margin: 0!important;
      background-color: gray;
@@ -96,11 +98,23 @@ html, body {
  /* The container for our text and stuff */
  #messageBox{
      position: absolute;  top: 0;  left: 0;
+     z-index: 1;
      display: flex;
      align-items: center;
      justify-content: center;
      width: 100%;
      height:100%;
  }
+ #filterBox{
+    position: absolute;  top: 0;  left: 0;
+    background-color: #00639c;
+    opacity: 0.5;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height:100%;
+}
 
 
