--- a/webapp/src/components/Navigation/navigationoverlaping.less
+++ b/webapp/src/components/Navigation/navigationoverlaping.less
@@ -44,4 +44,50 @@
 .list__tile--active .list__tile__action .icon {
   color: inherit;
 }
+/*VUE DROPZONE*/
+#dropzone{
+	border-radius: 4px;	background-color: #fff;	box-shadow: 0 -1px 2px 0 rgba(0,0,0,0.1);
+    margin:10px;
+    border-style: dashed;
+    border-width: 2px;
+}
+.active {
+    color: #78CB5B;
+  }
+  
+  .inactive {
+    color: #fff000;
+  }
+  
+  .fa.fa-circle:before {
+    content: "\25C9";
+    /*color: #000;*/
+  }
+  
+  th {
+    text-align: center;
+  }
+  
+  td:nth-child(1) {
+    text-align: center;
+  }
+  
+  td:nth-child(3) {
+    text-align: center;
+  }
+  
+  td:nth-child(2) {
+    padding-left: 40px;
+  }
+  
+  .event-active {
+    font-weight: bold;
+    color: #78CB5B;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+  }
+
+  
+
+  
 
