--- a/webapp/src/components/Navigation/navigationoverlaping.less
+++ b/webapp/src/components/Navigation/navigationoverlaping.less
@@ -46,10 +46,19 @@
 }
 /*VUE DROPZONE*/
 #dropzone{
-	border-radius: 4px;	background-color: #fff;	box-shadow: 0 -1px 2px 0 rgba(0,0,0,0.1);
-    margin:10px;
+    min-height: 300px !important;
+    border-radius: 4px;	background-color: #fff;	
+    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
     border-style: dashed;
     border-width: 2px;
+}
+#dropzoneOver{
+    min-height: 300px !important;
+    border-radius: 4px;	background-color: #fff;	
+    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
+    border-style: dashed;
+    border-color:#aecff3;
+    border-width: 6px;
 }
 .active {
     color: #78CB5B;
@@ -86,7 +95,7 @@
     text-transform: uppercase;
     letter-spacing: 1.2px;
   }
-
+ 
   
 
   
