--- a/webapp/src/components/Navigation/navigationoverlaping.less
+++ b/webapp/src/components/Navigation/navigationoverlaping.less
@@ -47,6 +47,7 @@
 /*VUE DROPZONE*/
 #dropzone{
     min-height: 300px !important;
+    margin:20px;
     border-radius: 4px;	background-color: #fff;	
     box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
     border-style: dashed;
@@ -54,6 +55,7 @@
 }
 #dropzoneOver{
     min-height: 300px !important;
+    margin:20px;
     border-radius: 4px;	background-color: #fff;	
     box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
     border-style: dashed;
